feat: Biodiversity Sensitive Areas process
