# backend/src/server.rs
@@ -5,7 +5,10 @@ use crate::{
     db::setup_db,
     handler,
     jobs::JobHandler,
-    processes::{HabitatDistanceProcess, ImpactMetricsProcess, NDVIProcess, ProcessesOpenApiSpec},
+    processes::{
+        BiodiversitySensitiveAreasProcess, HabitatDistanceProcess, NDVIProcess,
+        ProcessesOpenApiSpec,
+    },
     state::spawn_with_user,
 };
 use ogcapi::{
@@ -32,12 +35,9 @@ pub async fn server() -> anyhow::Result<ogcapi_services::Service> {
         .get_openapi_mut()
         .merge(ProcessesOpenApiSpec::openapi());
 
-    let mut processors: Vec<Box<dyn Processor>> = vec![
-        Box::new(Echo),
-        Box::new(NDVIProcess),
-        Box::new(ImpactMetricsProcess),
-    ];
+    let mut processors: Vec<Box<dyn Processor>> = vec![Box::new(Echo), Box::new(NDVIProcess)];
     add_habitat_distance_process(&mut processors, db_pool.clone()).await;
+    add_biodiversity_sensitive_areas_process(&mut processors, db_pool.clone()).await;
 
     let drivers = ogcapi_services::Drivers {
         jobs: Box::new(JobHandler::new(db_pool).await?),
@@ -100,6 +100,26 @@ async fn add_habitat_distance_process(
         Err(err) => {
             tracing::warn!(
                 "Failed to initialize HabitatDistanceProcess, skipping it: {:#}",
+                err
+            );
+        }
+    }
+}
+
+async fn add_biodiversity_sensitive_areas_process(
+    processors: &mut Vec<Box<dyn Processor>>,
+    db_pool: crate::db::DbPool,
+) {
+    match BiodiversitySensitiveAreasProcess::new(db_pool).await {
+        Ok(biodiversity_sensitive_areas_process) => {
+            tracing::info!(
+                "Successfully initialized BiodiversitySensitiveAreasProcess, adding it to the list of available processes."
+            );
+            processors.push(Box::new(biodiversity_sensitive_areas_process));
+        }
+        Err(err) => {
+            tracing::warn!(
+                "Failed to initialize BiodiversitySensitiveAreasProcess, skipping it: {:#}",
                 err
             );
         }
